[11.19] released ...
* A 'chained-junk-tokens' variable was introduced for the Bayesian junk
  mail filter. If set, the filter considers two-word tokens as described
  in Jonathan A. Zdziarski's paper 'Advanced Language Classification using
  Chained Tokens', <http://www.nuclearelephant.com/papers/chained.html>.
* When running in an UTF-8 locale, unprintable characters are now replaced
  by Unicode control pictures or the Unicode replacement character when
  printing to a terminal.
* The 'show' command now also avoids writing unprintable characters to a
  terminal.
* Only MIME-encode words in header fields if they start with '=?' or end
  with '?=' (instead of encoding any words containing '?', '=', or '_'),
  and declare them as 'us-ascii' if they do not contain any bytes with the
  highest bit set (Bugreport by Suresh Ramasubramanian).
* Fixed a junk mail tokenizer bug which caused the remainder of a message
  to be ignored if a period occurred at the first position following another
  token boundary.

[11.18] released 12/9/04
* When the 'write' command asks for an attachment filename and a '|' is
  given as the first character, the attachment is piped to the rest of
  the string interpreted as a shell command (contributed by Stephen Isard).
* The ~p escape now includes recipients that are local files in its output
  (Bugreport by Bob Tennent).
* The 'ungood' and 'unjunk' commands put the wrong marking on the messages
  they were applied too (regardless of the database update they performed).
  'Ungood' now marks a message as being junk, and 'unjunk' clears the junk
  mark.
* A 'record-resent' variable has been introduced. If it is set, the 'resend'
  and 'Resend' commands save messages to the 'record' folder. (Proposed by
  Bob Tennent.)
* 'redirect' and 'Redirect' are available as aliases for 'resend' and
  'Resend', respectively (proposed by Bob Tennent).
* A 'forward' command has been introduced that behaves more like the