@@ -39,7 +39,7 @@
 
 #ifndef lint
 #ifdef	DOSCCS
-static char sccsid[] = "@(#)version.c	2.277 (gritter) 12/28/04";
+static char sccsid[] = "@(#)version.c	2.278 (gritter) 12/29/04";
 #endif
 #endif /* not lint */
 
@@ -48,11 +48,11 @@ static char sccsid[] = "@(#)version.c	2.277 (gritter) 12/28/04";
  * Load this file first to get a "total" Mail version.
  */
 /*char	*version = "8.1 6/6/93";*/
-const char *version = "nail " V " 12/28/04";
+const char *version = "nail " V " 12/29/04";
 #ifndef	lint
 static const char *versionid
 #ifdef	__GNUC__
 __attribute__ ((unused))
 #endif
-= "@(#)nail " V " 12/28/04";
+= "@(#)nail " V " 12/29/04";
 #endif	/* !lint */
